err/instrumental.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/astkit'...
Listing './lib/python3.5/site-packages/astkit/compat'...
Compiling './lib/python3.5/site-packages/astkit/compat/py2.py'...
***   File "./lib/python3.5/site-packages/astkit/compat/py2.py", line 27
    exec object_ in globals_, locals_
               ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/astkit-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/instrumental'...
Listing './lib/python3.5/site-packages/instrumental/compat'...
Compiling './lib/python3.5/site-packages/instrumental/compat/py2.py'...
***   File "./lib/python3.5/site-packages/instrumental/compat/py2.py", line 27
    exec object_ in globals_, locals_
               ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/instrumental/plugins'...
Listing './lib/python3.5/site-packages/instrumental/plugins/nose'...
Listing './lib/python3.5/site-packages/instrumental/resources'...
Listing './lib/python3.5/site-packages/instrumental/resources/ui-lightness'...
Listing './lib/python3.5/site-packages/instrumental/resources/ui-lightness/images'...
Listing './lib/python3.5/site-packages/instrumental/samples'...
Listing './lib/python3.5/site-packages/instrumental/templates'...
Listing './lib/python3.5/site-packages/instrumental/templates/html'...
Listing './lib/python3.5/site-packages/instrumental/test'...
Listing './lib/python3.5/site-packages/instrumental/test/constructs'...
Compiling './lib/python3.5/site-packages/instrumental/test/py2_only.py'...
***   File "./lib/python3.5/site-packages/instrumental/test/py2_only.py", line 6
    print bar
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/instrumental/test/samples'...
Listing './lib/python3.5/site-packages/instrumental/test/samples/package'...
Listing './lib/python3.5/site-packages/instrumental/test/samples/pragmas'...
Listing './lib/python3.5/site-packages/instrumental-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
